refactor: optimize snapshot method to use List.copyOf for improved performance